# SyntheticSchmup

./: .clang-format  .gitignore  1.config_default.bat  1.config_default.sh  2.make_superbuild.bat  2.make_superbuild.sh  3.1.prepare_Debug.sh  3.1.prepare_Release.sh  3.2.start_qtcreator_Debug.sh  3.2.start_qtcreator_Release.sh  3.prepare_Debug.bat  3.prepare_Release.bat  4.start_visualstudio_Debug.bat  4.start_visualstudio_Release.bat  CMakeLists.txt  README.md  config_default.bat  config_default.sh  make_superbuild.bat  make_superbuild.sh  prepare_Debug.bat  prepare_Debug.sh  prepare_Release.bat  prepare_Release.sh  start_qtcreator_Debug.sh  start_qtcreator_Release.sh  start_visualstudio_Debug.bat  start_visualstudio_Release.bat
Concept/: Brainstorm.txt  Coding Environment Researches.txt  example.cpp
Concept/Concept Game Design/: Game design document.odt  Game design draft.odt  Game design draft.tex  Game logigram.odp  UML_code_design.xmi  objects_list.ods
Concept/Concept Story/: story.md  story.txt
Documentation/: technical_challenges.md
Documentation/Concept/: Coding Environment Researches.txt
Documentation/Concept/Concept Game Design/: README.md  UML_code_design.xmi
Documentation/Conception/: Game Design Document.odt  Technical conception.odt  story.md
Documentation/Preliminary studies/: Brainstorm.txt  example.cpp
Documentation/Preliminary studies/Game Design/: Game design draft.tex  objects_list.ods
Programme/: CMakeLists.txt  Drawable.cpp  Drawable.h  IState.h  Object2D.cpp  Object2D.h  Projectile.cpp  Projectile.h  Ship.cpp  Ship.h  Sound.cpp  Sound.h  StateGame.cpp  StateGame.h  StateManager.cpp  StateManager.h  StateMenu.cpp  StateMenu.h  SyntheticSchmup.cpp  SyntheticSchmup.h  main.cpp
Programme/pong_example/: CMakeLists.txt  Pong.cpp  window_example.cpp
